with refresh token

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,7 +30,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	//JWT
-	implementation 'com.auth0:java-jwt:3.4.1'
+	//implementation 'com.auth0:java-jwt:3.4.1'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
 
 	//For Test
 	runtimeOnly 'com.h2database:h2'
